--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
 
 	<!-- Description -->
-	<ui:Label binding-path="Description" class="bottom-space"/>
+	<ui:Label name="description" binding-path="Description" class="bottom-space"/>
 
 	<!-- Tags -->
 	<ui:Foldout text="Tags" name="tags-foldout">
