assets: Show material overrides in details pane.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
@@ -1,5 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
 
+	<ui:Foldout name="materials-foldout" text="Material Variations">
+		<ui:ScrollView name="materials-container" mode="Horizontal"/>
+	</ui:Foldout>
+
 	<!-- Description -->
 	<ui:Label name="description" binding-path="Description" class="bottom-space"/>
 
