--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverrideElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverrideElement.uxml
@@ -1,5 +1,5 @@
 ﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-	<uie:ToolbarToggle>
+	<uie:ToolbarToggle name="toggle">
 		<ui:Image name="thumbnail" />
 		<ui:Label name="label"/>
 	</uie:ToolbarToggle>
