--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverridePropertyDrawer.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverridePropertyDrawer.uss
@@ -1,4 +1,3 @@
-﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-	<uie:PropertyField binding-path="Name" label="Name" />
-	<uie:PropertyField binding-path="Material" label="Material" />
-</ui:UXML>
+﻿TextField > Label, ObjectField > Label {
+	min-width: 65px;
+}
