assets: Add quality label to assets.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
@@ -77,6 +77,10 @@ PreviewEditorElement {
 	align-self: flex-start;
 }
 
+#quality-container {
+	align-self: flex-start;
+}
+
 #info-geo-stats {
 	white-space: normal;
 }
