doc: Color left bar and more layout fixes.

--- a/VisualPinball.Unity/Documentation~/template/vpe/layout/_master.tmpl
+++ b/VisualPinball.Unity/Documentation~/template/vpe/layout/_master.tmpl
@@ -116,7 +116,7 @@
       </div>
 
       <div class="content">
-        <div class="actionbar">
+        <!-- div class="actionbar">
           <button class="btn btn-lg border-0 d-md-none" style="margin-top: -.65em; margin-left: -.8em"
               type="button" data-bs-toggle="offcanvas" data-bs-target="#tocOffcanvas"
               aria-controls="tocOffcanvas" aria-expanded="false" aria-label="Show table of contents">
@@ -124,7 +124,7 @@
           </button>
 
           <nav id="breadcrumb"></nav>
-        </div>
+        </div -->
 
         <article data-uid="{{uid}}">
           {{!body}}
