--- a/VisualPinball.Unity/Documentation~/template/vpe/public/main.css
+++ b/VisualPinball.Unity/Documentation~/template/vpe/public/main.css
@@ -10,7 +10,6 @@
 .navbar-github > svg { /* github logo color */
 	fill: #ccc;
 }
-
 body[data-layout=landing]>main { /* landing page full width */
 	display: block;
 }
@@ -19,27 +18,31 @@ body[data-layout=landing]>main { /* landing page full width */
 	display: block;
 }
 
+/* color overrides */
 :root,
 [data-bs-theme=light] {
 	--bs-font-sans-serif: Inter, 'Segoe UI', Tahoma, Helvetica, sans-serif;
 	--bs-body-font-family: var(--bs-font-sans-serif);
 	--bs-link-color-rgb: 214, 99, 22 !important;
 	--bs-link-hover-color-rgb: 183, 74, 0 !important;
+	--bs-code-color: #d6b933;
 	--vpe-body-bg-secondary: #f3f3f3;
 	--vpe-link-secondary: #00000080;
 	--vpe-link-secondary-hover: #000000aa;
+	--vpe-body-color-less-contrast: rgba(33, 37, 41, 0.5)
 }
 [data-bs-theme=dark] {
 	--bs-link-color-rgb: 236, 132, 61 !important;
 	--vpe-body-bg-secondary: #292e33;
 	--vpe-link-secondary: #ffffff80;
 	--vpe-link-secondary-hover: #ffffffaa;
+	--vpe-body-color-less-contrast: rgba(222, 226, 230, 0.5)
 }
-
 [data-bs-theme=dark] header { /* header slightly lighter in dark mode */
 	background-color: var(--vpe-body-bg-secondary) !important;
 }
 
+/* fix theme toggle button color */
 [data-bs-theme=light] header .dropdown a:hover,
 [data-bs-theme=light] header .dropdown a:active,
 [data-bs-theme=light] header .dropdown a:focus-visible,
@@ -48,29 +51,29 @@ body[data-layout=landing]>main { /* landing page full width */
 	color: white !important;
 }
 
-	/* don't underline links */
+/* don't underline links */
 a {
 	text-decoration: none !important;
 }
 
 /* zephyr fixes */
-.btn-outline-secondary {
+.btn-outline-secondary { /* outline button */
 	color: var(--bs-secondary-color) !important;
 }
-[data-bs-theme=dark] .btn-outline-secondary:hover {
+[data-bs-theme=dark] .btn-outline-secondary:hover { /* outline button hover */
 	color: var(--bs-body-bg) !important;
 }
-.link-secondary {
+.link-secondary { /* TOC links on the left */
 	color: var(--vpe-link-secondary) !important;
 }
 .link-secondary:hover {
 	color: var(--vpe-link-secondary-hover) !important;
 }
-#search-results > .sr-items .sr-item > .item-href {
+#search-results > .sr-items .sr-item > .item-href { /* search result colors */
 	color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
 }
 
-	/* landing logo colors */
+/* landing svg art colors */
 svg .cls-1 {  /* visual pinball engine */
 	fill: var(--bs-body-color);
 	font-family: Asgalt-Regular, Asgalt;
@@ -78,7 +81,7 @@ svg .cls-1 {  /* visual pinball engine */
 	letter-spacing: .19em;
 }
 svg .cls-2, .cls-3, .cls-4 { /* outer */
-	stroke-width: 0px;
+	stroke-width: 0;
 	fill: var(--bs-body-bg)
 }
 svg .cls-3 { /* logo */
@@ -88,85 +91,28 @@ svg .cls-4 { /* inner */
 	fill: var(--vpe-body-bg-secondary);
 }
 
-.border-top:not(.next-article) { /* footer background color */
+/* footer customization */
+body>footer, body[data-layout=landing]>footer { /* footer height */
+	color: var(--vpe-body-color-less-contrast) !important;
 	background-color: var(--vpe-body-bg-secondary);
+	font-size: 0.8rem !important;
+	height: 52px;
+	padding-left: 10px;
 }
 
-/*body > main {*/
-/*	padding-top: 0;*/
-/*}*/
-
-/*article {*/
-/*	margin-top: 20px;*/
-/*}*/
-
-/*main > .toc-offcanvas {*/
-/*	background-color: #efefef;*/
-/*	padding: 15px;*/
-/*	top: calc(35px + 1.6rem) !important;*/
-/*	max-height: calc(100vh - 35px - 1.6rem) !important;*/
-/*}*/
-
-/*!* fonts *!*/
-/*html,*/
-/*body {*/
-/*	font-family: Inter, 'Segoe UI', Tahoma, Helvetica, sans-serif;*/
-/*	font-size: 100%;*/
-/*}*/
-
-
+/* make titles bold */
 h1, h2 {
 	font-weight: bold;
 }
 
-/*.affix h5 { !* "In this article" *!*/
-/*	font-weight: 600;*/
-/*	letter-spacing: normal !important;*/
-/*}*/
-
-/*header .btn:hover {*/
-/*	background-color: #fff;*/
-/*}*/
-
-/*.btn.btn-default.active, .btn.btn-default:active {*/
-/*	outline: 0;*/
-/*	-webkit-box-shadow: none;*/
-/*	box-shadow: none;*/
-/*	background-color: rgba(1,1,1,0.08);*/
-/*}*/
-
-/*.navbar-brand > svg {*/
-/*	margin-top: 6px;*/
-/*}*/
-
-
-
-/*.navbar-default {*/
-/*	background-color: rgba(1,1,1,0.05);*/
-/*	border-color: rgba(1,1,1,0.1);*/
-/*}*/
-
-/*#sidetoc .sidefilter {*/
-/*	top: 94px;*/
-/*}*/
-
-/*#sidetoc .sidetoc.shiftup {*/
-/*	bottom: 0;*/
-/*}*/
-
-/*img[alt="Visual Pinball Engine"] {*/
-/*	margin-top: 15px;*/
-/*}*/
-
-/*.table-bordered,*/
-/*.table-bordered>tbody>tr>td,*/
-/*.table-bordered>tbody>tr>th,*/
-/*.table-bordered>tfoot>tr>td,*/
-/*.table-bordered>tfoot>tr>th,*/
-/*.table-bordered>thead>tr>td,*/
-/*.table-bordered>thead>tr>th {*/
-/*	border-color: rgba(1,1,1,0.15);*/
-/*}*/
-/*.table-striped > tbody > tr:nth-of-type(odd) {*/
-/*	background-color: rgba(1,1,1,0.03)*/
-/*}*/
+/* make tables striped */
+table.table.table-bordered > tbody > tr:nth-of-type(odd) > td {
+	background-color: var(--vpe-body-bg-secondary);
+}
+table.table.table-bordered > thead > tr > th { /* separate column header */
+	border-bottom-width: 3px;
+}
+table.table.table-bordered > * > tr > *:nth-child(1) { /* separate row header */
+	border-right-width: 3px;
+	font-style: italic;
+}
